--- a/inst/tex/RapFigures.tex
+++ b/inst/tex/RapFigures.tex
@@ -145,7 +145,7 @@
 \subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_presence_absence/snowcrab/annual/snowcrab\D large\D males_presence_absence\D mean\D 2014.png}}\\
 \subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_presence_absence/snowcrab/annual/snowcrab\D large\D males_presence_absence\D mean\D 2015.png}}\
 \subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/snowcrab\D large\D males_presence_absence/snowcrab/annual/snowcrab\D large\D males_presence_absence\D mean\D 2016.png}}\\
-\caption{Annual interpolations of potential habitat for the fishable component of SSE snow crab. Spatial representations are generated using generalized additive models of several habitat, environmental and biological variables.}
+\caption{Annual interpolations of potential habitat for the fishable component of SSE snow crab represented as the probability of finding snowcrab. Spatial representations are generated with lattice based methods using generalized additive models of several habitat, environmental and biological variables.}
 \end{figure}
 \clearpage
 
@@ -153,13 +153,13 @@
 
 \begin{figure}
 \centering
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2011.png}}\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2012.png}}\\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2013.png}}\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2014.png}}\\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2015.png}}\
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/fishable\D biomass\D 2016.png}}\\
-\caption{Annual interpolations of potential habitat for the fishable component of SSE snow crab. Spatial representations are generated using generalized additive models of several habitat, environmental and biological variables.}
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/prediction\D abundance\D mean\D 2011.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/prediction\D abundance\D mean\D 2012.png}}\\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/prediction\D abundance\D mean\D 2013.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/prediction\D abundance\D mean\D 2014.png}}\\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/prediction\D abundance\D mean\D 2015.png}}\
+\subfloat{\includegraphics[width=0.49\textwidth]{\h \es maps/fishable\D biomass/snowcrab/prediction\D abundance\D mean\D 2016.png}}\\
+\caption{Annual interpolations of fishable snowcrab biomass $log\left(\tfrac{t}{km^2}\right)$. Spatial representations are generated with lattice based methods using generalized additive models of several habitat, environmental and biological variables.}
 \end{figure}
 \clearpage
 
@@ -186,22 +186,22 @@
 \clearpage
 
 %--------------sorted ordination------------------------------------
-%\begin{figure}
-%\centering
-%\includegraphics[width=\textwidth]{\h \ei output/keyfactors\D anomalies.pdf}
-%\caption{Sorted ordination of anomalies of key social, economic and ecological patterns on the Scotian Shelf relevant to snow crab. Red indicates below the mean and green indicates above the mean.}
-%\end{figure}
-%\clearpage
-%
-%
-%%--------------first axis of sorted ordination------------------------------------
-%\begin{figure}
-%\centering
-%\includegraphics[width=\textwidth]{\h \ei output/keyfactors\D PC1.pdf}
-%\caption{First axis of variations in ordination of anomalies of social, economic and ecological patterns on the Scotian Shelf. Note strong variability observed near the time of the fishery collapse in the early 1990s. Note strong variability observed near the time of the fishery collapse in the early 1990s.}
-%\end{figure}
-%\clearpage
-%
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{\h \ei output/keyfactors\D anomalies.pdf}
+\caption{Sorted ordination of anomalies of key social, economic and ecological patterns on the Scotian Shelf relevant to snow crab. Red indicates below the mean and green indicates above the mean.}
+\end{figure}
+\clearpage
+
+
+%--------------first axis of sorted ordination------------------------------------
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{\h \ei output/keyfactors\D PC1.pdf}
+\caption{First axis of variations in ordination of anomalies of social, economic and ecological patterns on the Scotian Shelf. Note strong variability observed near the time of the fishery collapse in the early 1990s. Note strong variability observed near the time of the fishery collapse in the early 1990s.}
+\end{figure}
+\clearpage
+
 
 %------------------crab movement fig1 Movement map, Distances travelled and recap time-----
 
@@ -218,14 +218,14 @@
 \begin{figure}
 \centering
 \subfloat{\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/BZFigures/TagMovementRate.png}}\
-\caption{(Left) Distance travelled by tagged snow crab on the Scotian Shelf between 2005 and 2016. (Right) Return intervals in days between initial release and first capture of snow crab tagged on the Scotian Shelf. Periodicity in time intervals are explained by recaptures occurring during seasonal fishing operations.}
+\caption{(Left) Distance travelled by tagged snow crab on the Scotian Shelf between 2005 and 2016. (Right) Return intervals in days between initial release and last capture of snow crab tagged on the Scotian Shelf. Periodicity in time intervals are explained by recaptures occurring during seasonal fishing operations.}
 \end{figure}
 
 
 \begin{figure}
 \centering
 \subfloat{\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/BZFigures/MovementRates.png}}\
-\caption{(Left) Mean rate of movement of snow crab tagged on the Scotian Shelf by area and year. Route lengths derived from calculated shortest paths constrained by depth range of 60-280 m. Sample size small (<8 returns per area) for years 2003 to 2005 which accounts for the high variability especially in S-ENS for those years. (Right) Tags return rate, number of returns from tags applied in given area and year. Shows downward trend in recent years.}
+\caption{(Left) Mean rate of movement of snow crab tagged on the Scotian Shelf by area and year. Route lengths derived from calculated shortest paths constrained by depth range of 60-280 m. Sample size small (approximately 8 returns per area) for years 2003 to 2005 which accounts for the high variability especially in S-ENS for those years. (Right) Tags return rate, number of returns from tags applied in given area and year. Shows downward trend in recent years.}
 \end{figure}
 \clearpage
 
@@ -275,7 +275,7 @@
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/interpolated/snowcrab\D habitat\D sa.png}
-\caption{Annual variations in the surface area of potential snow crab habitat. The horizontal line indicates the long-term median surface area within each subarea. The estimates for the period from 1998 to the present are based upon snow crab surveys while those prior to 1998 are projected using incomplete data (and so less reliable). Within each subarea the 2014 habitat area was estimated using the mean of the past five years.}
+\caption{Annual variations in the surface area of potential snow crab habitat. The horizontal line indicates the long-term median surface area within each subarea. }
 \end{figure}
 \clearpage
 %-----------------------------temperature in potential snow crab habitat------------------------
@@ -379,29 +379,29 @@
 \clearpage
 
 %--------------------------winter skate as predators------------------------
-\begin{figure}
-\centering
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 204/ms\D no\D 204\D 2013.png}}\ 
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 204/ms\D no\D 204\D 2014.png}}\\ 
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 204/ms\D no\D 204\D 2015.png}}\ 
-\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 204/ms\D no\D 204\D 2016.png}}\\ 
-
-\caption{Locations of potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Winter skate}. Scale is $\tfrac{number}{km^2}$.}
-\end{figure}
-
-\clearpage
-
-\begin{figure}
-\centering
-\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 204.pdf}
-
-
-\caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Winter skate}.    }
-\end{figure}
-
-
-\clearpage
-
+%\begin{figure}
+%\centering
+%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 204/ms\D no\D 204\D 2013.png}}\ 
+%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 204/ms\D no\D 204\D 2014.png}}\\ 
+%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 204/ms\D no\D 204\D 2015.png}}\ 
+%\subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 204/ms\D no\D 204\D 2016.png}}\\ 
+%
+%\caption{Locations of potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Winter skate}. Scale is $\tfrac{number}{km^2}$.}
+%\end{figure}
+%
+%\clearpage
+%
+%\begin{figure}
+%\centering
+%\includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 204.pdf}
+%
+%
+%\caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{%Winter skate}.    }
+%\end{figure}
+%
+%
+%\clearpage
+%
 
 
 %-----------------------------cod as predators------------------------
@@ -459,7 +459,7 @@
 
 
 
-%-----------------------------plaise as predators------------------------
+%-----------------------------plaice as predators------------------------
 \begin{figure}
 \centering
 \subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 40/ms\D no\D 40\D 2013.png}}\ 
@@ -467,10 +467,10 @@
 \subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 40/ms\D no\D 40\D 2015.png}}\ 
 \subfloat{\includegraphics[width=0.49\textwidth]{\h \es R/maps/survey/snowcrab/annual/ms\D no\D 40/ms\D no\D 40\D 2016.png}}\\ 
 
-\caption{Locations of potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{American Plaise}. Scale is $\tfrac{number}{km^2}$.}
+\caption{Locations of potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{American Plaice}. Scale is $\tfrac{number}{km^2}$.}
 \end{figure}
 
-%------------------------time series of haddock abundance
+%------------------------time series of plaice abundance
 \clearpage
 
 \begin{figure}
@@ -478,7 +478,7 @@
 \includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/ms\D mass\D 40.pdf}
 
 
-\caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{Haddock}  }
+\caption{Trends in biomass $\left(\tfrac{kg}{km^2}\right)$ from the annual snow crab survey for potential \textbf{predators} of snow crab on the Scotian Shelf: \textbf{American Plaice}  }
 \end{figure}
 
 
@@ -585,10 +585,18 @@
 
 \begin{figure}
 \centering
+\includegraphics[width=\textwidth]{\h \es assessments/2016/BZFigures/CNSOPB_2017_2019.pdf}
+\caption{Map of Canadian Nova Scotia Offshore Petroleum Board call for exploration bids for 2017-2019. }
+\end{figure}
+\clearpage
+
+\begin{figure}
+\centering
 \includegraphics[width=\textwidth]{\h \es assessments/2013/BrentCameronFiles/emerafisheryfootprint.png}
 \caption{Fishery footprint map of the N-ENS snow crab fishery using landings data from logbook records between 2006 - 2010. Blue is low, yellow is medium and red is high total landings within each 2 minute grid. The red line represents the proposed corridor for placement of two transmission cables.  }
 \end{figure}
 \clearpage
+
 %------------spring landings
 \begin{figure}
 \centering
@@ -634,7 +642,7 @@
 \subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \es R/maps/logbook/snowcrab/annual/landings/landings\D 2014.png}}\\ 
 \subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \es R/maps/logbook/snowcrab/annual/landings/landings\D 2015.png}}\ 
 \subfloat{\includegraphics[width=0.49\textwidth,trim={0 1cm 0 1cm}]{\h \es R/maps/logbook/snowcrab/annual/landings/landings\D 2016.png}}\\ 
-\caption{Snow crab landings (tons/10 km$^2$ grid) from fisheries logbook data. Note the increase in landings inshore in S-ENS. For 4X, year refers to the starting year.}
+\caption{Snow crab landings (tons/10 km$^2$ grid) from fisheries logbook data. For 4X, year refers to the starting year.}
 \end{figure}
 \clearpage
 %--------------cpue from logbooks------------------------------------
@@ -695,7 +703,7 @@
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{\h \es assessments/2016/BZFigures/softcrabbymonthbyarea.pdf}
-\caption{The percent of sampled snow crab in the soft shelled state as determined by at-sea-observers from commercial snow crab traps.}
+\caption{The percent of sampled snow crab in the soft shelled state (<68 durometer) as determined by at-sea-observers from commercial snow crab traps.}
 \end{figure}
 \clearpage
 
@@ -727,7 +735,7 @@
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{\h \es assessments/2016/timeseries/survey/sexratio\D mat.pdf}\\ 
-\caption{ Annual sex ratios (proportion female) of mature snow crab observed in the survey. Since 2001, most of the Scotian Shelf was uniformly male dominated. There has been a decline in the relative proportion of mature female to male crab in both N- and S-ENS since peaking in 2008. One standard error bar is presented.}
+\caption{ Annual sex ratios (proportion female) of mature snow crab observed in the survey. Since 2001, most of the Scotian Shelf was uniformly male dominated. One standard error bar is presented.}
 \end{figure}
 \clearpage
 
