--- a/inst/tex/RapFigures.tex
+++ b/inst/tex/RapFigures.tex
@@ -16,7 +16,7 @@
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 \newcommand{\D}{.}
-\newcommand{\h}{/home/hubleyb/}
+\newcommand{\h}{\string~}
 \newcommand{\e}{bio.data/}
 \newcommand{\es}{bio.data/bio.snowcrab/}
 \newcommand{\eb}{bio.data/bio.bathymetry/}
